--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
-  <input aria-label="Search" class="form-control form-control-dark w-100" placeholder="Search" type="text">
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/">Automação Residencial</a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a class="nav-link" href="#">Sair</a>
     </li>
   </ul>
 </nav>
