--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/">Automação Residencial</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/">
+    <fa-icon icon="home"></fa-icon>
+  </a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
       <a class="nav-link" href="#">Sair</a>
