--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,19 +4,19 @@
       <li class="nav-item">
         <a class="nav-link active" href="#">
           <fa-icon icon="home"></fa-icon>
-          Dashboard
+          Home
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
-          <span data-feather="file"></span>
-          Orders
+          <fa-icon icon="bed"></fa-icon>
+          Bedroom
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">
-          <span data-feather="shopping-cart"></span>
-          Products
+          <fa-icon icon="cookie-bite"></fa-icon>
+          Kitchen
         </a>
       </li>
       <li class="nav-item">
