--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,13 +2,14 @@
   <div class="sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" href="#">
+        <a [routerLinkActiveOptions]="{
+        exact: true}" class="nav-link" routerLink="" routerLinkActive="active">
           <fa-icon icon="home"></fa-icon>
           Home
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" routerLink="bedroom" routerLinkActive="active">
           <fa-icon icon="bed"></fa-icon>
           Bedroom
         </a>
