--- a/src/app/modulos/temperature/temperature.component.html
+++ b/src/app/modulos/temperature/temperature.component.html
@@ -1,7 +1,7 @@
 <div id="temperature" class="card text-center" style="max-width: 18rem;">
   <div class="card-body">
     <fa-icon [icon]="temp_icon" size="4x"></fa-icon>
-    <h4>
+    <h4 class="mt-2">
       {{temperature.temperature}}{{temperature.type.abr}}
     </h4>
   </div>
