Correção na view

--- a/src/app/modulos/temperature/temperature.component.html
+++ b/src/app/modulos/temperature/temperature.component.html
@@ -1,14 +1,13 @@
-<div id="temperature" class="card text-center" style="max-width: 18rem;">
+<div class="card text-center" id="temperature">
   <div class="card-body">
     <fa-icon [icon]="temp_icon" size="4x"></fa-icon>
     <h4 class="mt-2">
       {{temperature.temperature}}{{temperature.type.abr}}
     </h4>
-  </div>
-  <div class="card-body">
+    <br>
     <div class="form-row">
-      <div class="col-md-6 offset-md-3">
-        <select id="temperaturetype" name="temperaturetype" class="form-control form-control-sm"
+      <div class="col-md-8 offset-md-2">
+        <select class="form-control form-control-md" id="temperaturetype" name="temperaturetype"
                 (change)="tempFilter($event.target.value)">
           <option *ngFor="let type of types" value="{{type.name}}">{{type.name}} - {{type.abr}}</option>
         </select>
