--- a/src/app/modulos/temperature/temperature.component.html
+++ b/src/app/modulos/temperature/temperature.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center" id="temperature">
+<div class="card text-center mb-3" id="temperature">
   <div class="card-body">
     <fa-icon [icon]="temp_icon" size="4x"></fa-icon>
     <h4 class="mt-2">
