--- a/src/app/modulos/humidity/humidity.component.html
+++ b/src/app/modulos/humidity/humidity.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center" id="luminosidade">
+<div class="card text-center mb-3" id="humidity">
   <div class="card-body">
     <fa-icon [icon]="icon" size="4x"></fa-icon>
     <h4 class="mt-2">
