--- a/src/app/modulos/luminosidade/luminosidade.component.html
+++ b/src/app/modulos/luminosidade/luminosidade.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center" id="luminosidade">
+<div class="card text-center mb-3" id="luminosidade">
   <div class="card-body">
     <fa-icon [icon]="[tipo,'lightbulb']" size="4x"></fa-icon>
     <h4 class="mt-2">
