--- a/src/app/modulos/presenca/presenca.component.html
+++ b/src/app/modulos/presenca/presenca.component.html
@@ -1,4 +1,4 @@
-<div class="card text-center" id="luminosidade">
+<div class="card text-center mb-3" id="presenca">
   <div class="card-body">
     <fa-icon [icon]="[tipo,'user-circle']" size="4x"></fa-icon>
   </div>
