--- a/src/app/bedroom/bedroom.component.html
+++ b/src/app/bedroom/bedroom.component.html
@@ -10,4 +10,16 @@
   <div class="col-md-3">
     <app-temperature></app-temperature>
   </div>
+  <div class="col-md-3">
+    <app-luminosidade></app-luminosidade>
+  </div>
+  <div class="col-md-3">
+    <app-humidity></app-humidity>
+  </div>
+  <div class="col-md-3">
+    <app-presenca></app-presenca>
+  </div>
+  <div class="col-md-3">
+    <app-door name="Sacada"></app-door>
+  </div>
 </div>
