--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-body {
+html, body {
   font-size: .875rem;
+  height: 100%;
 }
 
 /*
